[package]
name = "ipasir"
version = "0.3.1"
authors = ["Robbepop <robbepop@web.de>"]
license = "MIT/Apache-2.0"
readme  = "README.md"

# Attributes for crates.io.
categories = ["science", "api-bindings"]
keywords   = ["ffi", "sat", "solver", "incremental"]
description = """Bindings for the IPASIR API to communicate with incremental SAT solvers."""

repository = "https://github.com/robbepop/ipasir-rs"
documentation = "https://docs.rs/ipasir"

[package.metadata.docs.rs]
features = ["ffi"]

[dependencies]

[features]
default = []
ffi = []
